namespace.yml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "mongodb",
    "labels": {
      "name": "mongodb"
    }
  }
}
