ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubestore-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: staticwebservice
          servicePort: 80
